syntax = "proto3";

package form.service.v1;

// import "google/api/annotations.proto";
// import "google/protobuf/timestamp.proto";

option go_package          = "api/form/service/v1;v1";
option java_multiple_files = true;

// 接口
service Form {
    // 申请表
    // 得到入库申请表
    rpc GetStorageForm(GetStorageFormReq) returns (GetStorageFormReply) {}
    // 列出申请表(条件)
    rpc ListStorageForm(ListStorageFormReq) returns (ListStorageFormReply) {}
    // 创建申请表()
    rpc CreateStorageForm(CreateStorageFormReq)
        returns (CreateStorageFormReply) {}
    // 更新申请表
    rpc UpdateStorageForm(UpdateStorageFormReq)
        returns (UpdateStorageFormReply) {}
    // 报废表
    // 得到报废表
    rpc GetScrappedForm(GetScrappedFormReq) returns (GetScrappedFormReply) {}
    // 列出报废表(条件)
    rpc ListScrappedForm(ListScrappedFormReq) returns (ListScrappedFormReply) {}
    // 创建报废表()
    rpc CreateScrappedForm(CreateScrappedFormReq)
        returns (CreateScrappedFormReply) {}
    // 更新报废表
    rpc UpdateScrappedForm(UpdateScrappedFormReq)
        returns (UpdateScrappedFormReply) {}
}

message GetStorageFormReq {
    int64 id = 1;
}

message GetStorageFormReply {
    int64 id           = 1;
    int64 appliedAt    = 2;
    uint64 applicantId = 3;
    string applicant   = 5;
    int64 operatedAt   = 6;
    uint64 operatorId  = 7;
    string Operator    = 8;
    int32 stateNum     = 9;
    string state       = 10;
    uint64 assetId     = 11;
    string assetCode   = 12;
    uint32 areaId      = 13;
}

message ListStorageFormReq {
    message Conf {
        string applicant       = 1;
        string operator        = 2;
        uint64 applicantId     = 3;
        uint64 operatorId      = 4;
        int32 stateNum         = 5;
        string assetCode       = 6;
        repeated uint32 areaId = 7;
    }
    Conf conf      = 1;
    int64 pageNum  = 2;
    int64 pageSize = 3;
}

message ListStorageFormReply {
    message Form {
        int64 id           = 1;
        int64 appliedAt    = 2;
        uint64 applicantId = 3;
        string applicant   = 5;
        int64 operatedAt   = 6;
        uint64 operatorId  = 7;
        string Operator    = 8;
        int32 stateNum     = 9;
        string state       = 10;
        uint64 assetId     = 11;
        string assetCode   = 12;
        uint32 areaId      = 13;
    }
    repeated Form forms = 1;
    int64 pageTotal     = 2;
}

message CreateStorageFormReq {
    uint64 applicantId = 1;
    string applicant   = 2;
    int64 appliedAt    = 3;
    uint64 assetId     = 4;
    string assetCode   = 5;
    uint32 areaId      = 6;
    int32 stateNum     = 7;
}

message CreateStorageFormReply {
    int64 id           = 1;
    int64 appliedAt    = 2;
    uint64 applicantId = 3;
    string applicant   = 5;
    int64 operatedAt   = 6;
    uint64 operatorId  = 7;
    string Operator    = 8;
    int32 stateNum     = 9;
    string state       = 10;
    uint64 assetId     = 11;
    string assetCode   = 12;
    uint32 areaId      = 13;
}

message UpdateStorageFormReq {
    int64 id          = 1;
    int64 operatedAt  = 2;
    uint64 operatorId = 3;
    string Operator   = 4;
    int32 stateNum    = 5;
}

message UpdateStorageFormReply {
    int64 id           = 1;
    int64 appliedAt    = 2;
    uint64 applicantId = 3;
    string applicant   = 5;
    int64 operatedAt   = 6;
    uint64 operatorId  = 7;
    string Operator    = 8;
    int32 stateNum     = 9;
    string state       = 10;
    uint64 assetId     = 11;
    string assetCode   = 12;
    uint32 areaId      = 13;
}
// =================================
message GetScrappedFormReq {
    int64 id = 1;
}

message GetScrappedFormReply {
    int64 id           = 1;
    int64 appliedAt    = 2;
    uint64 applicantId = 3;
    string applicant   = 5;
    int64 operatedAt   = 6;
    uint64 operatorId  = 7;
    string Operator    = 8;
    int32 stateNum     = 9;
    string state       = 10;
    uint64 assetId     = 11;
    string assetCode   = 12;
    uint32 areaId      = 13;
}

message ListScrappedFormReq {
    message Conf {
        string applicant       = 1;
        string operator        = 2;
        uint64 applicantId     = 3;
        uint64 operatorId      = 4;
        int32 stateNum         = 5;
        string assetCode       = 6;
        repeated uint32 areaId = 7;
    }
    Conf conf      = 1;
    int64 pageNum  = 2;
    int64 pageSize = 3;
}

message ListScrappedFormReply {
    message Form {
        int64 id           = 1;
        int64 appliedAt    = 2;
        uint64 applicantId = 3;
        string applicant   = 5;
        int64 operatedAt   = 6;
        uint64 operatorId  = 7;
        string Operator    = 8;
        int32 stateNum     = 9;
        string state       = 10;
        uint64 assetId     = 11;
        string assetCode   = 12;
        uint32 areaId      = 13;
    }
    repeated Form forms = 1;
    int64 pageTotal     = 2;
}

message CreateScrappedFormReq {
    uint64 applicantId = 1;
    string applicant   = 2;
    int64 appliedAt    = 3;
    uint64 assetId     = 4;
    string assetCode   = 5;
    uint32 areaId      = 6;
    int32 stateNum     = 7;
}

message CreateScrappedFormReply {
    int64 id           = 1;
    int64 appliedAt    = 2;
    uint64 applicantId = 3;
    string applicant   = 5;
    int64 operatedAt   = 6;
    uint64 operatorId  = 7;
    string Operator    = 8;
    int32 stateNum     = 9;
    string state       = 10;
    uint64 assetId     = 11;
    string assetCode   = 12;
    uint32 areaId      = 13;
}

message UpdateScrappedFormReq {
    int64 id          = 1;
    int64 operatedAt  = 2;
    uint64 operatorId = 3;
    string Operator   = 4;
    int32 stateNum    = 5;
}

message UpdateScrappedFormReply {
    int64 id           = 1;
    int64 appliedAt    = 2;
    uint64 applicantId = 3;
    string applicant   = 5;
    int64 operatedAt   = 6;
    uint64 operatorId  = 7;
    string Operator    = 8;
    int32 stateNum     = 9;
    string state       = 10;
    uint64 assetId     = 11;
    string assetCode   = 12;
    uint32 areaId      = 13;
}